# Ludens

./: .gitignore  CMakeLists.txt
Core/OS/: CMakeLists.txt
Core/OS/Include/: Error.h
Core/Serialize/: CMakeLists.txt
Core/Serialize/Include/: INI.h
Core/Serialize/Lib/: INI.cpp
Core/Serialize/Tests/: SerializeTests.cpp
Embed/GLSL/: DeferredBlinnPhong.glsl  DeferredSSAO.glsl  GBuffer.glsl  ToneMapping.glsl
Extra/glad/include/glad/: glad.h
Extra/glad/src/: glad.c
Extra/stb/: CMakeLists.txt  stb.c
Extra/tinygltf/: tiny_gltf.cpp
Ludens/Builder/Main/Lib/: Shaderc.cpp
Ludens/Core/Application/: CMakeLists.txt
Ludens/Core/Application/Include/: Application.h  ApplicationLayer.h  Event.h  Input.h
Ludens/Core/Application/Lib/: Application.cpp  ApplicationWindow.cpp  ApplicationWindow.h  Input.cpp
Ludens/Core/DSA/: CMakeLists.txt
Ludens/Core/DSA/Benches/: Bench.cpp
Ludens/Core/DSA/Include/: Array.h  Optional.h  String.h  Vector.h  View.h
Ludens/Core/DSA/Tests/: DSATests.cpp  TestString.h  TestVector.h
Ludens/Core/Document/Include/: Document.h
Ludens/Core/Document/Lib/: Document.cpp
Ludens/Core/Header/: CMakeLists.txt
Ludens/Core/Header/Include/: Error.h  Types.h
Ludens/Core/Header/Tests/: HeaderTests.cpp  TestSingleton.h
Ludens/Core/IO/Include/: FileSystem.h
Ludens/Core/IO/Lib/: FileSystem.cpp
Ludens/Core/Math/: CMakeLists.txt
Ludens/Core/Math/Include/: Hex.h  Mat4.h  Math.h  Quat.h  Rect2D.h  Vec2.h  Vec3.h  Vec4.h
Ludens/Core/Math/Tests/: MathTests.cpp  TestMat4.h
Ludens/Core/Media/: CMakeLists.txt
Ludens/Core/Media/Include/: Image.h  Mesh.h  Model.h
Ludens/Core/Media/Lib/: Image.cpp  Mesh.cpp  Model.cpp
Ludens/Core/OS/: CMakeLists.txt
Ludens/Core/OS/Include/: Allocator.h  JobSystem.h  Memory.h  Time.h
Ludens/Core/OS/Lib/: JobSystem.cpp  Time.cpp
Ludens/Core/OS/Tests/: OSTests.cpp  TestMemory.h  TestPoolAllocator.h  TestStackAllocator.h  TestUID.h
Ludens/Core/PhysicsBase/: CMakeLists.txt
Ludens/Core/PhysicsBase/Include/Jolt/: JoltTypes.h
Ludens/Core/PhysicsBase/Lib/Jolt/: JoltBody.cpp  JoltJobSystem.cpp
Ludens/Core/RenderBase/: CMakeLists.txt
Ludens/Core/RenderBase/Include/: RBinding.h  RBuffer.h  RDevice.h  RFrameBuffer.h  RPass.h  RPipeline.h  RResult.h  RShader.h  RTexture.h  RTypes.h
Ludens/Core/RenderBase/Include/GL/: GLBuffer.h  GLCommand.h  GLContext.h  GLFrameBuffer.h  GLProgram.h  GLSL.h  GLTexture.h  GLVertex.h  GLVertexArray.h
Ludens/Core/RenderBase/Include/VK/: VKCommand.h  VKSwapChain.h
Ludens/Core/RenderBase/Lib/: RBase.cpp  RBase.h  RBinding.cpp  RBindingGL.cpp  RBindingGL.h  RBindingVK.cpp  RBuffer.cpp  RBufferGL.cpp  RBufferGL.h  RDeriveGL.cpp  RDeriveGL.h  RDeriveVK.cpp  RDeriveVK.h  RDevice.cpp  RDeviceGL.cpp  RDeviceGL.h  RDeviceVK.cpp  RDeviceVK.h  RFrameBuffer.cpp  RFrameBufferGL.cpp  RFrameBufferGL.h  RPassGL.cpp  RPassGL.h  RPipelineGL.cpp  RPipelineGL.h  RPipelineVK.cpp  RResult.cpp  RShader.cpp  RShaderGL.cpp  RShaderGL.h  RTexture.cpp  RTextureGL.cpp  RTextureGL.h  RTextureVK.cpp
Ludens/Core/RenderBase/Lib/GL/: GLBuffer.cpp  GLCommand.cpp  GLContext.cpp  GLFrameBuffer.cpp  GLProgram.cpp  GLSL.cpp  GLTexture.cpp  GLVertex.cpp  GLVertexArray.cpp
Ludens/Core/RenderBase/Lib/VK/: VKImage.cpp  VKSwapChain.cpp
Ludens/Core/RenderFX/: CMakeLists.txt
Ludens/Core/RenderFX/Include/: PrefabPipeline.h  RBatch.h  RFont.h  RMesh.h  RShaderCompiler.h
Ludens/Core/RenderFX/Include/Groups/: GBufferGroup.h  MaterialGroup.h  SSAOGroup.h  ViewportGroup.h
Ludens/Core/RenderFX/Include/Pipelines/: RectPipeline.h
Ludens/Core/RenderFX/Lib/: RMesh.cpp  RShaderCompiler.cpp
Ludens/Core/RenderFX/Lib/FrameBuffers/: ColorBuffer.cpp  GBuffer.cpp  SSAOBuffer.cpp
Ludens/Core/RenderFX/Lib/Groups/: GBufferGroup.cpp  MaterialGroup.cpp  SSAOGroup.cpp  ViewportGroup.cpp
Ludens/Core/RenderFX/Lib/Pipelines/: DeferredBlinnPhongPipeline.cpp  GBufferPipeline.cpp  RectPipeline.cpp  SwapChainTransferPipeline.cpp
Ludens/Core/RenderFX/Lib/Pipelines/PostProcess/: ToneMappingPipeline.cpp
Ludens/Core/RenderService/: CMakeLists.txt
Ludens/Core/RenderService/Include/: RenderService.h
Ludens/Core/RenderService/Lib/: BindingGroupResources.cpp  BindingGroupResources.h  FrameBufferResources.cpp  FrameBufferResources.h  PipelineResources.cpp  PipelineResources.h  RenderContext.cpp  RenderContext.h  RenderPassResources.cpp  RenderPassResources.h  RenderService.cpp  RenderUI.cpp
Ludens/Core/Serialize/: CMakeLists.txt
Ludens/Core/Serialize/Include/: INI.h  XML.h
Ludens/Core/Serialize/Lib/: XML.cpp
Ludens/Core/Serialize/Tests/: SerializeTests.cpp  SerializeXML.h
Ludens/Core/UI/: CMakeLists.txt
Ludens/Core/UI/Include/: UI.h  UILayout.h  UIWidget.h
Ludens/Core/UI/Include/Container/: UIScroll.h
Ludens/Core/UI/Include/Control/: UIButton.h  UILabel.h  UIPanel.h  UITexture.h
Ludens/Core/UI/Lib/: UIContext.cpp  UIFont.cpp  UILayout.cpp  UIWidget.cpp  UIWindow.cpp
Ludens/Core/UI/Lib/Container/: UIScroll.cpp
Ludens/Core/UI/Lib/Control/: UIButton.cpp  UILabel.cpp  UIPanel.cpp  UITexture.cpp
Ludens/Core/UI/Tests/: TestButton.h
Scripts/: Embed.py
